--- a/src/Components/Player/Player.css
+++ b/src/Components/Player/Player.css
@@ -4,11 +4,7 @@
   grid-gap: 50px;
   display: grid;
   grid-template-columns: 50px 1fr;
+  grid-gap: 100px;
 
 }
-.card img {
-  display: grid;
-  grid-template-columns: 50px 50px 1fr;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-}
+
