--- a/src/Components/Player/Player.css
+++ b/src/Components/Player/Player.css
@@ -1,9 +1,6 @@
-.card {
-  margin: 50px;
-  padding: 20px;
-  grid-gap: 50px;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-  grid-gap: 100px;
+.card img {
+    width: 200px;
+    height: 130px;
+    margin: 26px;
+    padding: 0px;
 }
-
